--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
+                    <finalName>app</finalName>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
